- new plugin: Wilcoxon Rank Sum test and Wilcoxon Exact Rank Sum test
- new plugin: scatterplot matrix
- new plugin: correlation matrix plot
- safer destruction of R backend on quitting
- fix compilation for the upcoming R 2.5.0		TODO: check again
							TODO: update debian dependencies:
							- the old depends + :
							- if compiled with R < 2.4.0: dependes r-base-core < 2.4.0
							- if compiled with R 2.4.0 or greater: dependes r-base-core >= 2.4.0
							- if compiled with R 2.5.0 or greater: dependes r-base-core >= 2.5.0 (or pre-versions!)
- show full error message for syntax errors (only if compiled with R 2.4.0 or newer)
- more correct auto-printing of values for user commands (only if compiled with R 2.4.0 or newer)
- more correct handling of user commands consisting of several statements (only if compiled with R 2.4.0 or newer)
- add ability to search command history context sensitively
- add possibility to use dropdown lists in plugins

--- Version 0.4.5 - Jan-21-2007
- change shortcuts for Open/Save Workspace to Ctrl+Shift+O/S to avoid clash with Open/Save Script File
- remove "Configure Packages" option from Workspace menu, as it is also in Settings menu
- fixed: non-local workspaces would not be loaded
- fixed: specifying a workspace to load on the command line would only work for full urls
- new Console RMB actions: "copy selection cleaned" and "run selection"
- added a basic help system, and some introductory help pages
- added plugin for skewness and kurtosis
- added several plugins for distribution analysis
- added plugins for stripchart & density plot
- enhancements to existing plot plugins
- added refresh output and flush output as toolbar actions
- removed the "output" menu; entries were moved to "Edit" and "View"
- always show all top level menus
- code generated for most plugins cleaned and simplified
- new function rk.results () for use in plugins
- fix: the output window would not refresh changed plot images (unless closed and reopened)