@@ -55,6 +55,7 @@ public:
 		ComponentText = 2011,
 		ComponentTab = 2012,
 		ComponentDropDown = 2013,
+		ComponentPreviewBox = 2014,
 		ComponentStandard = 2100,
 		ComponentUser = 3000	/**< for user expansion */
 	};
