@@ -6,6 +6,43 @@ function calculate () {
 }
 
 function printout () {
+	global $scale;
+	global $bw;
+	global $adjust;
+	global $narm;
+	global $giveRkern;
+	global $x;
+	global $breaksopt;
+
+	preparedata ();
+?>
+rk.header ("Histogram", list ("Frequency", "<? echo $scale; ?>", "Breaks algorithm", <? echo ("\"" . $breaks . "\""); ?>, "Variable", rk.get.description (<? echo ($x); ?>)))
+rk.graph.on ()
+<?	makeplotcommand (); ?>
+rk.graph.off ()
+<?
+}
+
+function cleanup () {
+}
+
+function preview () {
+	preparedata ();
+	makeplotcommand ();
+}
+
+
+
+// internal helper functions below;
+function preparedata () {
+	global $scale;
+	global $bw;
+	global $adjust;
+	global $narm;
+	global $giveRkern;
+	global $x;
+	global $breaksopt;
+
 	$breaks = getRK_val ("breaks");
 	$scale = getRK_val ("scale");
 	$bw =  getRK_val ("bw");
@@ -19,19 +56,24 @@ function printout () {
 	} else if (!empty ($breaks)) {
 		$breaksopt = "breaks=\"" . $breaks . "\"";
 	}
+}
+
+function makeplotcommand () {
+	global $scale;
+	global $bw;
+	global $adjust;
+	global $narm;
+	global $giveRkern;
+	global $x;
+	global $breaksopt;
 ?>
-rk.header ("Histogram", list ("Frequency", "<? echo $scale; ?>", "Breaks algorithm", <? echo ("\"" . $breaks . "\""); ?>, "Variable", rk.get.description (<? echo ($x); ?>)))
-rk.graph.on ()
 try ({
 	hist (<? echo ($x); ?>, <? echo ($breaksopt); ?>, freq = <? echo $scale; ?><? getRK ("plotoptions.code.printout"); ?>)
 <?	if (($scale=="FALSE") && getRK_val ("density")) { ?>
 	lines(density(<? echo ($x); ?>, bw="<? echo ($bw); ?>", adjust = <? echo ($adjust); ?>, <? echo ($giveRkern); ?>, <? echo ($narm); ?>, n = <? getRK ("n"); ?>), col= "<? getRK ("col_density"); ?>")
 <?	} ?>
 })
-rk.graph.off ()
 <?
 }
 
-function cleanup () {
-}
 ?>
